--- a/src/website/views/jobdetails.pug
+++ b/src/website/views/jobdetails.pug
@@ -4,25 +4,25 @@ html
     include style.css
   head
     include navbar.pug
-  body(class='background')
-    h1(class='title') Post Emergency
+  body()
+    h1() Post Emergency
     each job in jobs
-      table(class='table')
-        tr(class='thead')
-          th(class='table-titles') ID
-          th(class='table-titles') Success 
-          th(class='table-titles') IP 
-          th(class='table-titles') Status 
-          th(class='table-titles') Output
-          th(class='table-titles') Completed
+      table()
+        tr()
+          th() ID
+          th() Success 
+          th() IP 
+          th() Status 
+          th() Output
+          th() Completed
         each jobDetails in job.details
-          tr(class='table-tr')
-            th(class='table-items')=job.jobId
-            th(class='table-items')=jobDetails.success
-            th(class='table-items')=jobDetails.ip
-            th(class='table-items')=jobDetails.message
-            th(class='table-items')=jobDetails.output
-            th(class='table-items')=job.hasFinished
+          tr()
+            th()=job.jobId
+            th()=jobDetails.success
+            th()=jobDetails.ip
+            th()=jobDetails.message
+            th()=jobDetails.output
+            th()=job.hasFinished
 
 
 
