--- a/src/website/views/assets.pug
+++ b/src/website/views/assets.pug
@@ -1,28 +1,25 @@
 html
-    title Assets
-    style 
-        include style.css
-    script 
-        include ../scripts/assets.js
-    head
-        include navbar.pug
-    body(class='background-assets')
-      h1(class='title') Adding Assets
-      form(class='background-form ' action="/assets" method="POST") 
-        div(class='asset-div')
-            div(class='assets-columns' id='assets')
-                h2(class='head-top') Serials and Names
-                div(id='container', class='add-div')
-                    button(id='add-btn', class='asset-buttons', type='button') Add
-                    div(id='entries')
-                        each asset in assets
-                            div(class='input-div')
-                                div
-                                    label(class='label') Serial
-                                    input(value=asset.serial, id='serial-div' class='input-field' type='text' name='serial[]')
-                                div
-                                    label(class='label') Name
-                                    input(value=asset.name, id='name-div' class='input-field' type='text' name='name[]')  
-                                button(class='delete-btn', type='button') Delete               
-        div(class='asset-save')
-            button(class='asset-buttons', type='submit') Save
+  title Assets
+  style 
+    include style.css
+  script 
+    include ../scripts/assets.js
+  body.atv-background
+    include components/navbar.pug
+    p.atv-title Adding Assets
+    form.atv-form(action="/assets" method="POST") 
+      div.asset__div
+        div
+          button.atv-button(id='add-btn' type='button') Add
+        div.asset__columns(id='container')
+          div(id='entries')
+            each asset in assets
+              div
+                label Serial
+                input.atv-input-field(value=asset.serial id='serial-div' type='text' name='serial[]')
+                label Name
+                input.atv-input-field(value=asset.name id='name-div' type='text' name='name[]')  
+                button.atv-button(type='button' name='delete-button') Delete               
+      div.scanner__save
+        button.atv-button(type='submit') Save
+    include components/footer.pug
