--- a/src/website/views/emergency.pug
+++ b/src/website/views/emergency.pug
@@ -2,17 +2,15 @@ html
   title Emergency
   style 
     include style.css
-  head
-    include navbar.pug
-  body(class='background')
-    div(class='emergency-container')
-      h1(class='title') Emergency is #{isActive ? 'active' : 'not active'}      
-      form(method='POST', action='/emergency')
-        div(class='emergency-switch')
-          label(for='stop') Stop
-          input(type='radio', id='stop', name='set', value='stop')
-          label(for='start') Start
-          input(type='radio', id='start', name='set', value='start')
-        button(type='submit') Sumbit
-
+  body.atv-background
+    include components/navbar.pug
+    p.atv-title Emergency is #{isActive ? 'active' : 'not active'}      
+    form.emergency__form(method='POST' action='/emergency')
+      div.emergency__div
+        label(for='stop') Stop
+        input(type='radio' id='stop' name='set' value='stop')
+        label(for='start') Start
+        input(type='radio' id='start' name='set' value='start')
+      button.atv-button(type='submit') Submit
+    include components/footer.pug
 
