--- a/src/website/views/jobpage.pug
+++ b/src/website/views/jobpage.pug
@@ -2,29 +2,24 @@ html
   title Jobs
   style 
     include style.css
-  head
-    include navbar.pug
-  body(class='background')
-    h1(class='title') Jobs
+  body.atv-background
+    include components/navbar.pug
+    p.atv-title Jobs
     each job in jobs
-      table(class='table')
-        tr(class='thead')
-          th(class='table-titles') ID
-          th(class='table-titles') Success 
-          th(class='table-titles') IP 
-          th(class='table-titles') Status 
-          th(class='table-titles') Output
-          th(class='table-titles') Completed
+      table.atv-table
+        tr.atv-table-title
+          th.atv-table-title ID
+          th.atv-table-title Success 
+          th.atv-table-title IP 
+          th.atv-table-title Status 
+          th.atv-table-title Output
+          th.atv-table-title Completed
         each jobDetails in job.details
-          tr(class='table-tr')
-            th(class='table-items')=job.jobId
-            th(class='table-items')=jobDetails.success
-            th(class='table-items')=jobDetails.ip
-            th(class='table-items')=jobDetails.message
-            th(class='table-items')=jobDetails.output
-            th(class='table-items')=job.hasFinished
-
-
-
-
-
+          tr.atv-table-title
+            th.atv-table-item=job.jobId
+            th.atv-table-item=jobDetails.success
+            th.atv-table-item=jobDetails.ip
+            th.atv-table-item=jobDetails.message
+            th.atv-table-item=jobDetails.output
+            th.atv-table-item=job.hasFinished
+    include components/footer.pug
