--- a/src/website/views/logs.pug
+++ b/src/website/views/logs.pug
@@ -2,15 +2,13 @@ html
   title Logs
   style 
     include style.css
-  head
-    include navbar.pug
-  body(class='background')
-    h1(class='title') System Logs
-    div(class='log-div')
-      form(action='/logs' method='GET')
-        label(class='log-label') Page Size:
-        div(class='log-div')
-          select(class='input-field' type='text' id='size' name='size')
+  body.atv-background
+    include components/navbar.pug
+    p.atv-title System Logs
+      form.atv-form(action='/logs' method='GET')
+        label() Page Size:
+        div.logs__dropdown-div
+          select.atv-input-field(type='text' id='size' name='size')
             option(value='' disabled selected hidden)='Select Page Size'
             option(value=5 selected= size===5)=5
             option(value=10 selected= size===10)=10
@@ -19,37 +17,37 @@ html
             option(value=40 selected= size===40)=40
             option(value=50)=50
             option(value=100 selected= size===100)=100
-        label(class='log-label') Filter by Name:
-        div(class='log-div')
-          select(class='input-field' type='text' id='name' name='name')
+        label Filter by Name:
+        div.logs__dropdown-div
+          select.atv-input-field(type='text' id='name' name='name')
             option(value='' disabled selected hidden)='Select Name'
             option(value='' selected= name==='')='None'
             option(value='connection-pool' selected= name==='connection-pool')='connection-pool'
             option(value='application' selected= name==='application')='application'
             option(value='candidate-scanner' selected= name==='candidate-scanner')='candidate-scanner'
-        label(class='log-label') Filter by Level:
-        div(class='log-div')
-          select(class='input-field' type='text' id='level' name='level')
+        label Filter by Level:
+        div.logs__dropdown-div
+          select.atv-input-field(type='text' id='level' name='level')
             option(value='' disabled selected hidden)='Select Level'
             option(value='' selected= level==='')='None'
             option(value='info' selected= level==='info')='info'
             option(value='error' selected= level==='error')='error'
             option(value='warn' selected= level==='warn')='warn'
             option(value='debug' selected= level==='debug')='debug'
-        button(class='log-button' type='submit' ) Submit
-    div(class='a-div')
-      div(class='a-child-div')
+        button.atv-button( type='submit' ) Submit
+      div.log__div
         each pageNum in pagesRange
-          a(href=`/logs?page=${pageNum}&size=${size}&name=${name}&level=${level}`, class='log-a')= pageNum
-    table(class='table')
-      tr(class='thead')
-        th(class='table-titles') Name
-        th(class='table-titles') Level
-        th(class='table-titles') Time 
-        th(class='table-titles') Message 
+          a.log__a(href=`/logs?page=${pageNum}&size=${size}&name=${name}&level=${level}`, )= pageNum
+    table.atv-table
+      tr.atv-table-title
+        th.atv-table-title Name
+        th.atv-table-title Level
+        th.atv-table-title Time
+        th.atv-table-title Message
       each log in logs
-        tr(class='table-tr') 
-          th(class='table-items')= log.name
-          th(class='table-items')= log.level
-          th(class='table-items')= log.timestamp
-          th(class='table-items')= log.message
+        tr.atv-table-title 
+          th.atv-table-item= log.name
+          th.atv-table-item= log.level
+          th.atv-table-item= log.timestamp
+          th.atv-table-item= log.message
+    include components/footer.pug
