--- a/src/website/views/password.pug
+++ b/src/website/views/password.pug
@@ -2,23 +2,22 @@ html
   title Create New Password
   style
     include style.css
-  head
-    include navbar.pug
-  body(class='background-password')
-    h1(class='head-top') Create New Password
-    div(class='password-head')    
-      form(class='form-password' method='POST', action='/password')
-        div(class='login-div')
-          label(class='paragraph' for='originalPassword') Current Password 
-          input(class='input-login' type='password', id='originalPassword', placeholder='Current Password', name='originalPassword', required)
-        div(class='login-div')
-          label(class='paragraph' for='password') Change Password
-          input(class='input-login' type='password', id='password', placeholder='New Password', name='password', onchange='validate()', required)
-        div(class='login-div')
-          label(class='paragraph' for='confirmPassword') Confirm Password
-          input(class='input-login' type='password', id='confirmPassword', placeholder='Confirm New Password', name='confirmPassword', onchange='validate()', required)
-        div(class='error' id='password-match-warning', hidden=true) Current Password and Confirm Password do not match!
-        div(class='error' id='password-length-warning', hidden=true) Password has to be more than 8 characters long
-        button(class='login-button' logintype='submit', id='myButton') Submit
+  body.login
+    include components/navbar.pug
+    form.password__form(method='POST' action='/password')
+      p.atv-title Create New Password 
+      div.atv-div
+        label(for='originalPassword') Current Password 
+        input.atv-input-field(type='password' id='originalPassword' placeholder='Current Password' name='originalPassword', required)
+      div.atv-div
+        label(for='password') Change Password
+        input.atv-input-field(type='password' id='password' placeholder='New Password' name='password' onchange='validate()', required)
+      div.atv-div
+        label(for='confirmPassword') Confirm Password
+        input.atv-input-field(type='password' id='confirmPassword' placeholder='Confirm New Password' name='confirmPassword' onchange='validate()', required)
+      button.atv-button(logintype='submit' id='myButton') Submit
+      p(id='password-match-warning', hidden=true) Current Password and Confirm Password do not match!
+      p(id='password-length-warning', hidden=true) Password has to be more than 8 characters long
     script 
-        include ../scripts/change-password.js
+      include ../scripts/change-password.js
+    include components/footer.pug
