--- a/src/website/views/auth.pug
+++ b/src/website/views/auth.pug
@@ -1,18 +1,20 @@
 html
-    title Login
-    head
-        link(href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css')
-    style
-        include style.css
-    body.login
-        include components/navbarlogin.pug
-        form.login__form(method='POST' action='/auth')
-            p.login__title Login
-            div.login__div
-                img.login__icon(src="/images/user.svg")
-                input.atv-input-field(type='text' id='username' placeholder='Username' name='username' value='', required)
-            div.login__div
-                img.login__icon(src="/images/pass.svg")
-                input.atv-input-field(type='password' id='password' placeholder='Password' name='password' value='', required)
-            button.atv-button(type='submit' value='connecting') Log in
-        include components/footer.pug
+  title Login
+  head
+    link(href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css')
+  style
+    include style.css
+  body.login
+    include components/navbarlogin.pug
+    form.login__form(method='POST' action='/auth')
+      p.login__title Login
+      div.login__div
+        img.login__icon(src="/images/user.svg")
+        input.atv-input-field(type='text' id='username' placeholder='Username' name='username' value='', required)
+      div.login__div
+        img.login__icon(src="/images/pass.svg")
+        input.atv-input-field(type='password' id='password' placeholder='Password' name='password' value='', required)
+      button.atv-button(type='submit' value='connecting') Log in
+      div 
+        p #{errorMessage}
+    include components/footer.pug
