--- a/src/website/views/events/usage-state.pug
+++ b/src/website/views/events/usage-state.pug
@@ -4,7 +4,7 @@ html
     style 
       include ../style.css
   body(class='background')
-    include ../navbar.pug
+    include ../components/navbar.pug
     h1(class='title') Screen State Events
     div(class='log-div')
       form(action='/events/usage-state' method='GET')
