--- a/src/website/views/components/navbar.pug
+++ b/src/website/views/components/navbar.pug
@@ -4,13 +4,13 @@ div.navbar
       img.navbar-login__logo(src='/images/corpcloud-logo.png')
   a.navbar__link(href='/') Home              
   a.navbar__link(href='/emergency') Emergency
-  a.navbar__link(href='/jobpage') Jobs           
+  a.navbar__link(href='/jobs') Jobs           
   div.navbar__dropdown
     button.navbar__dropbtn Settings
     div.navbar__dropdown-content
       a.navbar__dropdown-link(href='/scanner') Scanner Settings
       a.navbar__dropdown-link(href='/password') Change Password
-      a.navbar__dropdown-link(href='/assets') Asset Page
+      a.navbar__dropdown-link(href='/assets') Assets
   div.navbar__dropdown
     button.navbar__dropbtn Monitoring
     div.navbar__dropdown-content
