--- a/src/website/views/jobs/list.pug
+++ b/src/website/views/jobs/list.pug
@@ -1,7 +1,8 @@
 html
-  title Jobs
-  style 
-    include ../style.css
+  head
+    title Jobs
+    style 
+      include ../style.css
   body.atv-background
     include ../components/navbar.pug
     p.atv-title Jobs
