--- a/src/website/views/components/navbar.pug
+++ b/src/website/views/components/navbar.pug
@@ -4,7 +4,8 @@ div.navbar
       img.navbar-login__logo(src='/images/corpcloud-logo.png')
   a.navbar__link(href='/') Home              
   a.navbar__link(href='/emergency') Emergency
-  a.navbar__link(href='/jobs') Jobs           
+  a.navbar__link(href='/jobs') Jobs
+  a.navbar__link(href='/tasks') Tasks
   div.navbar__dropdown
     button.navbar__dropbtn Settings
     div.navbar__dropdown-content
