--- a/src/website/views/homepage.pug
+++ b/src/website/views/homepage.pug
@@ -5,14 +5,15 @@ html
   body.atv-background
     include components/navbar.pug
     p.atv-title Devices
-    table.atv-table
-      tr.atv-table-title
-        th.atv-table-title Serial 
-        th.atv-table-title Name
-        th.atv-table-title Status 
-      each key in Object.keys(status)
-        tr.atv-table-title 
-          th.atv-table-item= key
-          th.atv-table-item= status[key].name
-          th(class= status[key].state === 'online' ? 'atv-table-item' : 'atv-table-item atv-table-item__highlight-red')= status[key].state
+    div.atv-table-container
+      table.atv-table
+        tr.atv-table-title
+          th.atv-table-title Serial 
+          th.atv-table-title Name
+          th.atv-table-title Status 
+        each key in Object.keys(status)
+          tr.atv-table-title 
+            th.atv-table-item= key
+            th.atv-table-item= status[key].name
+            th(class= status[key].state === 'online' ? 'atv-table-item' : 'atv-table-item atv-table-item__highlight-red')= status[key].state
     include components/footer.pug
