--- a/src/website/views/assets.pug
+++ b/src/website/views/assets.pug
@@ -7,19 +7,20 @@ html
   body.atv-background
     include components/navbar.pug
     p.atv-title Adding Assets
-    form.atv-form(action="/assets" method="POST") 
-      div.asset__div
-        div
-          button.atv-button(id='add-btn' type='button') Add
-        div.asset__columns(id='container')
-          div(id='entries')
-            each asset in assets
-              div
-                label Serial
-                input.atv-input-field(value=asset.serial id='serial-div' type='text' name='serial[]')
-                label Name
-                input.atv-input-field(value=asset.name id='name-div' type='text' name='name[]')  
-                button.atv-button(type='button' name='delete-button') Delete               
-      div.scanner__save
-        button.atv-button(type='submit') Save
+    div.atv-setting-container
+      form.atv-form(action="/assets" method="POST") 
+        div.asset__div
+          div
+            button.atv-button(id='add-btn' type='button') Add
+          div.asset__columns(id='container')
+            div(id='entries')
+              each asset in assets
+                div
+                  label Serial
+                  input.atv-input-field(value=asset.serial id='serial-div' type='text' name='serial[]')
+                  label Name
+                  input.atv-input-field(value=asset.name id='name-div' type='text' name='name[]')  
+                  button.atv-button(type='button' name='delete-button') Delete               
+        div.scanner__save
+          button.atv-button(type='submit') Save
     include components/footer.pug
