--- a/src/website/views/components/footer.pug
+++ b/src/website/views/components/footer.pug
@@ -1,10 +1,11 @@
 div.footer
-  div.footer__div
-    p.footer__paragraph-title Support details
-    p.footer__paragraph 1300 409 552 <br> support@corpcloud.com.au
-  div.footer__div
-    p.footer__paragraph-title Build Number
-    p.footer__paragraph Needs to be implemented
-  div.footer__div
-    p.footer__paragraph-title Install ID
-    p.footer__paragraph Needs to be implemented
+  div.footer__container
+    div.footer__div
+      p.footer__paragraph-title Support details
+      p.footer__paragraph 1300 409 552 <br> support@corpcloud.com.au
+    div.footer__div
+      p.footer__paragraph-title Build Number
+      p.footer__paragraph Needs to be implemented
+    div.footer__div
+      p.footer__paragraph-title Install ID
+      p.footer__paragraph Needs to be implemented
