--- a/src/website/views/style.scss
+++ b/src/website/views/style.scss
@@ -46,6 +46,11 @@ $standard-font: 'Roboto', sans-serif;
   border-radius: 10px;
 }
 
+.atv-table-container,
+.atv-setting-container {
+  padding-bottom: 100px;
+}
+
 .atv-table-title {
   padding: 15px;
   background-color: #0081ba;
@@ -82,6 +87,17 @@ $standard-font: 'Roboto', sans-serif;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.atv-list-container {
+  display: flex;
+  justify-content: center;
+}
+
+.atv-list {
+  margin-right: 5px;
+  text-decoration: none;
+  color: black;
 }
 
 /* Navbar */
@@ -194,13 +210,15 @@ $standard-font: 'Roboto', sans-serif;
 .footer {
   background-color: #333;
   border-top: 2px solid #0081ba;
-  display: flex;
   position: fixed;
   bottom: 0;
-  z-index: 999;
   width: 100%;
   height: 100px;
   left: 0;
+
+  &__container {
+    display: flex;
+  }
 
   &__div {
     margin-left: 20px;
@@ -240,8 +258,6 @@ $standard-font: 'Roboto', sans-serif;
     padding-left: 60px;
     padding-right: 60px;
     border: 1px solid #ccc;
-    height: 330px;
-    width: 300px;
     border-radius: 5px;
     background-color: white;
   }
@@ -335,17 +351,15 @@ $standard-font: 'Roboto', sans-serif;
   justify-content: center;
 }
 
-/* System Logs */
+/* User Guide */
 
-.log__div {
+.guide__title {
   display: flex;
-  justify-content: center;
+  font-size: 25px;
 }
 
-.log__a {
-  margin-right: 5px;
-  text-decoration: none;
-  color: black;
+.guide__container {
+  padding-bottom: 100px;
 }
 
 /* Tasks */
